# agimus-sot

./: CMakeLists.txt  COPYING  NEWS  README.md  package.xml
doc/: Doxyfile.extra.in  control.tex  main-page.hh
doc/figures/: contact-admittance.pdf_tex
launch/: supervisor.launch
scripts/: simulation.py  start_supervisor.py
sot_hpp/: factory.py  ros_interface.py  supervisor.py  tools.py
src/: CMakeLists.txt  boolean-reduction.cc  command.hh  contact-admittance.cc  contact-admittance.hh  delay.cc  event.cc  event.hh  gain-adaptive.cc  gain-adaptive.hh  holonomic-constraint.cc  holonomic-constraint.hh  object-localization.cc  object-localization.hh  path-sampler.cc  path-sampler.hh  python-module-py.cc  ros_subscribe.cpp  ros_subscribe.hh  ros_subscribe.hxx  sot_to_ros.hh  test.py  time.cc  time.hh
src/agimus_sot/: __init__.py  action.py  events.py  factory.py  ros_interface.py  solver.py  srdf_parser.py  supervisor.py  tools.py
src/agimus_sot/control/: __init__.py  controllers.py  gripper.py  switch.py
src/agimus_sot/react/: __init__.py  pre_grasp.py  task_factory.py
src/agimus_sot/task/: __init__.py  com.py  contact.py  end_effector.py  foot.py  grasp.py  op_frame.py  posture.py  pre_grasp.py  pre_grasp_post_action.py  task.py
src/sot_hpp/: factory.py  ros_interface.py  srdf_parser.py  supervisor.py  tools.py
src/sot_hpp/control/: controllers.py  gripper.py  switch.py
tests/: CMakeLists.txt  admittance.py  appli-play-hpp-path.py  play-hpp-path.py  ros_subscriber.py  srdf_parser.py  tasks.py  test_gripper_force_control.py  tools.py
