<package>
  <name>agimus_sot</name>
  <version>0.0.0</version>
  <description> Package to link SoT to the Agimus framework. </description>
  <maintainer email="jmirabel@laas.fr">Joseph Mirabel</maintainer>
  <author>Joseph Mirabel</author>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>agimus_sot_msgs</run_depend>

  <depend>dynamic_graph_bridge</depend>
  <depend>sot-core</depend>
  <depend>dynamic-graph-python</depend>

  <depend>hpp-manipulation-corba</depend>
</package>
