<package>
  <name>agimus_sot</name>
  <version>1.0.0</version>
  <description> Package to link SoT to the Agimus framework. </description>
  <maintainer email="jmirabel@laas.fr">Joseph Mirabel</maintainer>
  <author>Joseph Mirabel</author>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>agimus_sot_msgs</run_depend>
</package>
