<?xml version="1.0"?>
<package format="2">
  <name>agimus-sot</name>
  <version>1.0.3</version>
  <description> Package to link SoT to the Agimus framework. </description>
  <maintainer email="jmirabel@laas.fr">Joseph Mirabel</maintainer>
  <author>Joseph Mirabel</author>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>agimus_sot_msgs</exec_depend>

  <depend>dynamic_graph_bridge</depend>
  <depend>sot-core</depend>
  <depend>dynamic-graph-python</depend>

  <depend>hpp-manipulation-corba</depend>
</package>
